<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_app">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_top_bar"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_keybinding_title"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/sd_keybinding_preset_summary"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

    <ListView
        android:id="@+id/keybinding_preset_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:listSelector="@drawable/background_nav_button"
        android:padding="@dimen/_12sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_nav_bar"
        android:padding="@dimen/_14sdp">

        <Button
            android:id="@+id/keybinding_open_editor"
            style="@style/StarDockPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sd_keybinding_open_editor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/keybinding_import"
                style="@style/StarDockPrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_6sdp"
                android:text="@string/sd_keybinding_import" />

            <Button
                android:id="@+id/keybinding_share"
                style="@style/StarDockPrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/_6sdp"
                android:text="@string/sd_keybinding_share" />

            <Button
                android:id="@+id/keybinding_reset"
                style="@style/StarDockPrimaryButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sd_keybinding_reset" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
